# PlayGotchi

./: .gitignore  CMakeLists.txt  README.md
Source/: pdxinfo
src/: main.c
